# libgs_plugin_abroot

./: .clang-format  Makefile  gs-packagekit-helper.c  gs-packagekit-helper.h  gs-packagekit-task.c  gs-packagekit-task.h  gs-plugin-abroot.c  gs-plugin-abroot.h  meson.build  packagekit-common.c  packagekit-common.h  test_pk.c
.cache/clangd/index/: gs-packagekit-helper.c.746370B755B02475.idx  gs-packagekit-helper.h.366D7A3598491A70.idx  gs-packagekit-task.c.1D9EB248642FD56F.idx  gs-packagekit-task.h.5A177AFA52979ED9.idx  gs-plugin-abroot.c.95EB1452480FE725.idx  gs-plugin-abroot.h.AB875D7F8D761523.idx  libgs-plugin-abroot.c.018CE904367F25DB.idx  packagekit-common.c.77DF142836B47011.idx  packagekit-common.h.B3757D166444E977.idx
